# CompetitiveMatchmaker

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/matchmaker-core/: Cargo.toml
crates/matchmaker-core/src/: balance.rs  config.rs  error.rs  lib.rs  matcher.rs  metrics.rs  pool.rs  relaxation.rs
crates/matchmaker-service/: Cargo.toml
crates/matchmaker-service/src/: main.rs  state.rs  workers.rs
crates/matchmaker-service/src/api/: handlers.rs  mod.rs
crates/matchmaker-types/: Cargo.toml
crates/matchmaker-types/src/: lib.rs
docker/: Dockerfile
scripts/: load_simulation.py  run_load_simulation.sh
