[workspace]
resolver = "2"
members = [
    "crates/matchmaker-types",
    "crates/matchmaker-core",
    "crates/matchmaker-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Eternal Labs"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
dashmap = "6"
parking_lot = "0.12"
rand = "0.9"
tower-http = { version = "0.6", features = ["cors", "trace"] }
