[package]
name = "matchmaker-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "matchmaker-service"
path = "src/main.rs"

[dependencies]
matchmaker-core = { path = "../matchmaker-core" }
matchmaker-types = { path = "../matchmaker-types" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
